Disable safe teleport when out of safe teleports

It's confusing that safe teleport falls back to random teleport when
you're out of safe teleports. Simply disable this action when no safe
teleports are remaining.

https://bugzilla.gnome.org/show_bug.cgi?id=535006